# ai_ollama_python

./: .env  .gitignore  pyproject.toml
app/bailian/: ali_test.py  bailian_agent.py  bailian_perl_agent.py  bailian_prompt.py  bailian_runnables.py  bailian_tools.py  common.py  ollama_test.py
app/chain/: chain_lcel.py
app/code_agent/: multi_chat.py
app/code_agent/agent/: agent_chat.py  code_agent.py
app/code_agent/mcp/: meeting_tool.py  shell_tool.py  terminal_tool.py
app/code_agent/prompts/: multi_chat_prompt.py
app/code_agent/tools/: amap_tools.py  file_tools.py  meeting_tool.py  shell_tool.py  terminal_tool.py
app/code_agent/util/: mcp_util.py
app/common/: llm.py
app/embedd/: agent.py  dashscope_embedd.py  re_test.py  redis_util.py
app/embedd/resource/: a.txt
app/mcp/: common.py
app/mcp/amap/: amap.py
app/mcp/stdio/: mcp_playwright_client.py  mcp_stdio_client.py  mcp_stdio_server.py
resource/: b.txt
