[project]
name = "ai-ollama-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.2",
    "langchain>=1.1.0",
    "langchain-experimental>=0.4.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-redis>=0.2.5",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-redis>=0.2.1",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
]
